# cs77-graphics-final

./: README.md
assignment03/: CMakeLists.txt
assignment03/Debug/glfw.build/: dgph  dgph~
assignment03/Debug/glfw.build/Objects-normal/x86_64/: cocoa_window.dia  glfw3.LinkFileList
assignment03/Release/glfw.build/: dgph
assignment03/assign3build/: CMakeCache.txt  cmake_install.cmake
assignment03/assign3build/03_animate.build/Debug/ALL_BUILD.build/: Script-A16EB0DCDEDF4CD5B9250B12.sh  dgph  dgph~
assignment03/assign3build/03_animate.build/Debug/ZERO_CHECK.build/: Script-37B3DFD53A5E422AA8AB02FF.sh  dgph
assignment03/assign3build/03_animate.build/Debug/common.build/: dgph  dgph~
assignment03/assign3build/03_animate.build/Debug/common.build/Objects-normal/x86_64/: common.LinkFileList
assignment03/assign3build/03_animate.xcodeproj/: project.pbxproj
assignment03/assign3build/03_animate.xcodeproj/project.xcworkspace/xcuserdata/blumoon729.xcuserdatad/: UserInterfaceState.xcuserstate
assignment03/assign3build/03_animate.xcodeproj/project.xcworkspace/xcuserdata/pinkmauikitten.xcuserdatad/: UserInterfaceState.xcuserstate
assignment03/assign3build/03_animate.xcodeproj/xcuserdata/blumoon729.xcuserdatad/xcschemes/: 03_animate.xcscheme  ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  common.xcscheme  glfw.xcscheme  xcschememanagement.plist
assignment03/assign3build/03_animate.xcodeproj/xcuserdata/pinkmauikitten.xcuserdatad/xcschemes/: 03_animate.xcscheme  ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  common.xcscheme  glfw.xcscheme
assignment03/assign3build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
assignment03/assign3build/DerivedData/03_animate/: info.plist
assignment03/assign3build/DerivedData/03_animate/Index/Debug/macosx10.11-x86_64/03_animate.xcindex/: db.xcindexdb-shm  db.xcindexdb-wal  db.xcindexdb.strings-dir  db.xcindexdb.strings-file  db.xcindexdb.strings-res  db.xcindexdb.strings-sym
assignment03/assign3build/DerivedData/03_animate/Logs/Issues/: 0BAF4552-B27D-499E-BD95-33E7322A1FCA.xcactivitylog  15466BCD-1EC9-4C72-8052-F0045B98F8CD.xcactivitylog  29CEE14E-64E0-45F4-A617-F9F150A95C5F.xcactivitylog  833501D7-B42F-49A6-9E0C-21A629F0768E.xcactivitylog  88187902-4368-4018-91FC-438223DE3EA6.xcactivitylog  Cache.db
assignment03/assign3build/DerivedData/03_animate/TextIndex/: text-filter.idx
assignment03/assign3build/DerivedData/ModuleCache/: Session.modulevalidation
assignment03/assign3build/src/: cmake_install.cmake
assignment03/assign3build/src/apps/: cmake_install.cmake
assignment03/assign3build/src/apps/03_animate.build/Debug/03_animate.build/: dgph  dgph~
assignment03/assign3build/src/apps/03_animate.build/Debug/03_animate.build/Objects-normal/x86_64/: 03_animate.LinkFileList  03_animate.d  03_animate.dia
assignment03/assign3build/src/common/: cmake_install.cmake
assignment03/assign3build/src/common/03_animate.build/Debug/common.build/: dgph  dgph~
assignment03/assign3build/src/common/03_animate.build/Debug/common.build/Objects-normal/x86_64/: common.LinkFileList  glew.d  image.d  json.d  lodepng.d  scene.d  tesselation.d  tesselation.dia
assignment03/assign3build/src/common/ext/glfw/: cmake_install.cmake
assignment03/assign3build/src/common/ext/glfw/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
assignment03/assign3build/src/common/ext/glfw/GLFW.xcodeproj/: project.pbxproj
assignment03/assign3build/src/common/ext/glfw/src/: cmake_install.cmake
assignment03/assign3build/src/common/ext/glfw/src/03_animate.build/Debug/glfw.build/: dgph  dgph~
assignment03/assign3build/src/common/ext/glfw/src/03_animate.build/Debug/glfw.build/Objects-normal/x86_64/: clipboard.d  cocoa_clipboard.d  cocoa_gamma.d  cocoa_init.d  cocoa_joystick.d  cocoa_monitor.d  cocoa_time.d  cocoa_window.d  cocoa_window.dia  context.d  gamma.d  glfw3.LinkFileList  init.d  input.d  joystick.d  monitor.d  nsgl_context.d  time.d  window.d
assignment03/scenes/: 01_monkey_keyframed01.json  02_monkey_keyframed02.json  04_samba_skinned.json  05_swing_skinned.json  06_particles_simulated01.json  07_particles_simulated02.json  08_particles_simulated03.json  09_cloth_simulated01.json  10_cloth_simulated02.json  11_cloth_simulated03.json  animate_vertex.glsl
assignment03/src/: CMakeLists.txt
assignment03/src/apps/: 03_animate.cpp  CMakeLists.txt
assignment03/src/common/: CMakeLists.txt  common.h  debug.h  gls.h  image.cpp  image.h  json.cpp  json.h  scene.cpp  scene.h  tesselation.cpp  tesselation.h  vmath.h
assignment03/src/common/03_animate.build/Debug/common.build/: dgph  dgph~
assignment03/src/common/03_animate.build/Release/common.build/: dgph
assignment03/src/common/ext/glew/: glew.c  glxew.h  readme.txt
assignment03/src/common/ext/glfw/: CMakeLists.txt
assignment03/src/common/ext/lodepng/examples/: example_optimize_png.cpp  example_png_info.cpp  example_reencode.cpp
